Fix tutorial help button on mobile

--- a/styles.css
+++ b/styles.css
@@ -133,7 +133,7 @@ button:active {
 button#gotit {
     position: absolute;
     left: 50%;
-    top: 60%;
+    top: 75%;
     transform: translate(-50%, -50%);
     font-size: 3rem;
     z-index: 20000;
